# Safety-GUARD

./: .env  .env.example  .env.production.example  .gitignore  .replit  BACKEND_SUMMARY.md  CREDENTIALS_ROTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICK_REF.md  DEPLOY_NOW.md  EMAIL_CONFIRMATION_FIX.md  LOCAL_DEVELOPMENT.md  README.md  RENDER_CONNECTION_SETUP.md  SECURITY_AND_DEPLOYMENT.md  SETUP_COMPLETE.md  TECHNOLOGY_REPORT.md  TESTING_AND_VERIFICATION.md  index.html  package-lock.json  package.json  pyproject.toml  pytest_result.txt  render.yaml  requirements.txt  server.py  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  verify_deployment.py  vite.config.ts
.netlify/: netlify.toml  state.json
Safety-GUARD-main/: .env.production.example  .replit  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RENDER_NETLIFY.md  FINAL_DEPLOYMENT_STEPS.md  GITHUB_SECRETS_SETUP.md  GO_LIVE_NOW.md  INTEGRATION.md  PHASE2_IMPLEMENTATION_GUIDE.md  PRODUCTION_READINESS.md  README.md  RENDER_DEPLOYMENT.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  render.yaml  server.py  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
attached_assets/: Pasted--MODIFIED-MASTER-FIX-PROMPT-LIVE-GPS-TRACKING-REAL-TIME_1782758881101.txt  Pasted--MODIFIED-MASTER-FIX-PROMPT-LIVE-GPS-TRACKING-REAL-TIME_1782759112231.txt  Pasted--Safety-GUARD-Enterprise-Tactical-Command-Center-Upgrad_1782659002565.txt  Pasted--txt-id-women-safety-step-by-step-prompt-Build-a-comple_1779610880040.txt  (+9 more)
backend/: .env  .env.example  DEPLOYMENT.md  README.md  (+4 more)
(+178 files in other folders)
