[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "aiohttp-retry>=2.9.1",
    "fastapi>=0.136.3",
    "twilio>=9.10.9",
    "uvicorn>=0.47.0",
    "python-socketio>=5.11.0",
    "python-engineio>=4.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "scipy>=1.11.4",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "httpx>=0.25.2",
]
